[metadata]
name = beyond
version = 0.3
description = Flight Dynamic Library
long_description = file: README.rst
keywords = flight dynamic, satellite, space
author = Jules David
author_email = jules@onada.fr
url = https://github.com/galactics/beyond
license = GPLv3
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find: beyond/
include_package_data = True
zip_safe = False
install_requires =
    numpy
    sgp4
    jplephem

[options.extras_require]

dev =
    sphinx
    pytest
    pytest-cov

[flake8]
exclude = __init__.py
max-complexity = 20
doctests = 1
max-line-length = 100

[tool:pytest]
addopts = -v --cov beyond --cov-report html --doctest-modules beyond/ tests/
