[metadata]
name = beyond
version = attr:beyond.__version__
description = Flight Dynamic Library
long_description = file: README.rst
keywords = flight dynamic, satellite, space
author = Jules David
author_email = jules@onada.fr
url = https://github.com/galactics/beyond
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy
    sgp4
    jplephem

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    tox
tests =
    pytest
    pytest-cov

[flake8]
exclude = __init__.py
max-complexity = 20
doctests = 1
ignore = E501
max-line-length = 100

[tool:pytest]
addopts = -v --cov beyond --cov-report html --doctest-modules beyond/ tests/
filterwarnings =
    ignore:A frame with the name
